--- a/cv.html
+++ b/cv.html
@@ -91,6 +91,7 @@
                 <td>septembrie 2023-prezent</td>
                 <td>Universitatea Lucian Blaga din Sibiu</td>
                 <td>Ingineria Sistemelor Multimedia </td>
+                <a href="http://csac.ulbsibiu.ro/">CSAC</a>
             </tr>
         </table>
      </section>
