--- a/cv.html
+++ b/cv.html
@@ -8,8 +8,7 @@
 </head>
 <body>
      <header>
-        <h1>Bolovanica Valentina-Teodora</h1>
-        <h2>Curriculum Vitae</h2>
+        <h1>Curriculum Vitae</h1>
      </header> 
 
      <section>
@@ -19,6 +18,10 @@
                 <td>Fotografie:</td>
                 <td><img src="cvhtml.jpg" alt="Fotografia mea" width="150"></td>
             </tr>  
+            <tr>
+                <td>Nume:</td>
+                <td>Bolovanica Valentina-Teodora</td>
+            </tr>
             <tr>
                 <td>Adresă:</td>
                 <td>Strada Hipodromului,numărul 6,Sibiu,România</td>
